# IBM_DE_ML_Spark

./: .gitignore  Parquet_file_tocsv_decision_tree.ipynb  README.md  SparkML (1).ipynb  pyproject.toml
docs/notebooks/: Parquet_file_tocsv_decision_tree.ipynb  SparkML (1).ipynb
src/: data_extraction.py  data_ingestion.py
